--- a/common.ru.po
+++ b/common.ru.po
@@ -5434,7 +5434,7 @@ msgstr "END"
 
 #: qcsrc/common/util.qc:1476
 msgid "PAUSE"
-msgstr "PAUSE"
+msgstr "ПАУЗА"
 
 #: qcsrc/common/util.qc:1478
 msgid "NUMLOCK"
@@ -7657,7 +7657,7 @@ msgstr "Пауза"
 msgid ""
 "Pause updating the server list to prevent servers from \"jumping around\""
 msgstr ""
-"Приостановить обновление списка для закрепления серверов на одном месте"
+"Приостановить обновление списка для закрепления серверов на своих местах"
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_join.qc:75
 #: qcsrc/menu/xonotic/dialog_multiplayer_join_serverinfotab.qc:30
@@ -9461,7 +9461,7 @@ msgstr "Использовать ввод с мыши через DGA"
 
 #: qcsrc/menu/xonotic/dialog_settings_input.qc:94
 msgid "Pressing \"enter console\" key also closes it"
-msgstr "Нажатие клавиши «открыть консоль» ещё и закрывает её"
+msgstr "Применять клавишу «Открыть консоль» и для закрытия"
 
 #: qcsrc/menu/xonotic/dialog_settings_input.qc:95
 msgid "Allow the console toggling bind to also close the console"
@@ -9469,7 +9469,7 @@ msgstr "Использовать клавишу открытия консоли 
 
 #: qcsrc/menu/xonotic/dialog_settings_input.qc:97
 msgid "Automatically repeat jumping if holding jump"
-msgstr "Повторять прыжки при зажатой кнопке прыжка"
+msgstr "Повторять прыжки при удержании кнопки прыжка"
 
 #: qcsrc/menu/xonotic/dialog_settings_input.qc:100
 msgid "Jetpack on jump:"
