--- a/common.bg.po
+++ b/common.bg.po
@@ -4,6 +4,7 @@
 #
 # Translators:
 # Delian, 2023
+# Delian, 2023
 # 411370735b8ef90fa32c21e58a50941e_d905c03 <7784313cf022f885419b74f26eaf98f3_541595>, 2016-2017
 # Krasimir Mikov, 2022
 # Krasimir Mikov, 2022
@@ -18,7 +19,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-11 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Delian, 2023\n"
+"Last-Translator: ubone <van_ds_ff@mail.bg>, 2016\n"
 "Language-Team: Bulgarian (http://app.transifex.com/team-xonotic/xonotic/"
 "language/bg/)\n"
 "Language: bg\n"
