--- a/common.hu.po
+++ b/common.hu.po
@@ -22,7 +22,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-11 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Barnabás Klemens, 2023\n"
+"Last-Translator: MmAaXx500 <viktor.balogh2000@gmail.com>, 2018\n"
 "Language-Team: Hungarian (http://app.transifex.com/team-xonotic/xonotic/"
 "language/hu/)\n"
 "Language: hu\n"
